<resources>
    <string name="app_name">Monitor : TMK Midline 19</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٽرويو شروع ڪريو </string>
    <string name="nextSection"> اڳيون سيڪشن </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="dcstatus"> انٽرويو جو نتيجو</string>
    <string name="complete"> مکمل</string>
    <string name="incomplete">نا مکمل</string>
    <string name="secALabel">A: HH Identification, Introduction And Consent</string>
    <string name="secBLabel">B: HOUSEHOLD MEMBERS’ INFORMATION </string>
    <string name="secCLabel">C: گھر جي سماجي ۽ اقتصادي معلومات </string>
    <string name="secDLabel">D: REPRODUCTIVE HEALTH, MATERNAL AND CHILD MORTALITY (Complete this section  for all married aged 15-49 years in the household)</string>
    <string name="secELabel">E: Deceased Mother Information</string>
    <string name="secFLabel">F: Deceased Child Information</string>
    <string name="secGLabel">G: Access to LHWs </string>
    <string name="secHALabel">(HA: ٻار جي صحت(دستن جي بيماري جي باري ۾</string>
    <string name="secHBLabel">HB: ٻار جي صحت(ساھ کڻڻ ۾ تڪليف)</string>
    <string name="secILabel">I: حفاظتي ٽڪن جي معلومات</string>
    <string name="secJLabel">J: BREAST FEEDING AND NUTRITION </string>
    <string name="secKLabel">K: پاڻي ۽ صفائي</string>
    <string name="secLLabel">L: ھٿ ڌوئڻ</string>
    <string name="secMLabel">M: WASH (Spot Check) </string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="male"> مرد</string>
    <string name="female"> عورت </string>
    <string name="yes"> ھا </string>
    <string name="no"> نه </string>
    <string name="dkn"> خبر نه آھي </string>
    <string name="day"> ڏينهن </string>
    <string name="month"> مهينو </string>
    <string name="year"> سال </string>
    <string name="hour"> ڪلاڪ </string>
    <string name="min"> منٽ </string>
    <string name="other"> ٻيو ڪو وضاحت ڪريو. </string>
    <string name="name">ٻار جو نالو</string>
    <string name="checkHHpresent"> Selected Head name present (A/C Line listing) </string>
    <string name="ta01"> Cluster Number </string>
    <string name="ta02"> Cluster type </string>
    <string name="ta02a"> LHW Covered </string>
    <string name="ta02b"> LHW UnCovered </string>
    <string name="ta02c"> LHW Partially Covered </string>
    <string name="ta03"> Name of Tehsil/Taluka </string>
    <string name="ta03a"> Tando Mohammad Khan </string>
    <string name="ta03b"> Tando Ghulam Hyder </string>
    <string name="ta03c"> Bulri Shah Karim </string>
    <string name="ta04"> Name of Union Council </string>
    <string name="ta04a"> Lakhat </string>
    <string name="ta04b"> Shaikh Bhirkio </string>
    <string name="ta04c"> Tando Saeendad </string>
    <string name="ta04d"> TMK 01 </string>
    <string name="ta04e"> . TMK 02 </string>
    <string name="ta04f"> TMK 03 </string>
    <string name="ta04g"> Dando </string>
    <string name="ta04h"> Ghulam Shah Bagrani </string>
    <string name="ta04i"> Nazarpur </string>
    <string name="ta04j"> Tando Ghulam Hyder </string>
    <string name="ta04k"> Allah Yar Turk </string>
    <string name="ta04l"> Jinhan Soomro </string>
    <string name="ta04m"> Bulri Shah Karim </string>
    <string name="ta04n"> Saeed Khan Lund </string>
    <string name="ta04o"> Mullakatiar </string>
    <string name="ta04p"> Saeed Matto </string>
    <string name="ta04q"> Saeedpur </string>
    <string name="ta05"> House No </string>
    <string name="ta05h"> House No </string>
    <string name="ta05kh"> Khandan number </string>
    <string name="ta05u"> Gas or electricity bill No </string>
    <string name="ta06"> Village </string>
    <string name="ta07"> Block/mohalla </string>
    <string name="ta08"> Street </string>
    <string name="ta09"> Have you got the permission to start interview? </string>
    <string name="ta09c"> گھرو آف / اجازت دستياب ناهي. </string>
    <string name="tbAge"> تاريخ پيدائش / عمر </string>
    <string name="tbAge02"> عمر </string>
    <string name="tbdob01"> تاريخ پيدائش </string>
    <string name="tb01"> گھر ڀاتيءَ جو سريل نمبر </string>
    <string name="tb02"> نالو </string>
    <string name="tb03"> گھر جي سربراھ سان رشتو </string>
    <string name="tb03a"> Head of HH </string>
    <string name="tb03b"> Wife/Husband </string>
    <string name="tb03c"> Son/Daughter </string>
    <string name="tb03d"> Son in law/Daughter in law </string>
    <string name="tb03e"> Grand child </string>
    <string name="tb03f"> Parents </string>
    <string name="tb03g"> Parents in law </string>
    <string name="tb03h"> Brother/Sister </string>
    <string name="tb03i"> Brother in law/Sister in law </string>
    <string name="tb03j"> Niece/Nephew </string>
    <string name="tb03k"> Grand Parents </string>
    <string name="tb03l"> Aunts/Uncle </string>
    <string name="tb03m"> Adopted/Step child </string>
    <string name="tb03n"> Domestic Servant </string>
    <string name="tb04"> جنس </string>
    <string name="tb05"> پيءُ جو نالو </string>
    <string name="tb06">
  ماءُ جو نالو </string>
    <string name="tb07"> پيدائش جي تاريخ
    ڪارڊ/سرٽيفيڪٽ/ياداشت ذريعي پيدائش جي تاريخ لکو
    </string>
    <string name="tb08"> عمر </string>
    <string name="tb09"> تعليم </string>
    <string name="tb10"> ڌنڌو </string>
    <string name="tb10a"> Housewife </string>
    <string name="tb10b"> Professional /Managerial </string>
    <string name="tb10c"> Clerical/technical </string>
    <string name="tb10d"> Sales and Services </string>
    <string name="tb10e"> Skilled manual </string>
    <string name="tb10f"> Unskilled manual </string>
    <string name="tb10g"> Agriculture </string>
    <string name="tb10h"> Business </string>
    <string name="tb10ia"> Student-School </string>
    <string name="tb10ib"> Student-Madrasah </string>
    <string name="tb10j"> Unemployed </string>
    <string name="tb10k"> Retired </string>
    <string name="tb10l"> Teacher </string>
    <string name="tb10999"> Not Applicable </string>
    <string name="tb11"> ازدواجي حيثيت </string>
    <string name="tb11a"> Single </string>
    <string name="tb11b"> Married </string>
    <string name="tb11c"> Unmarried </string>
    <string name="tb11d"> Widowed </string>
    <string name="tb11e"> Divorced/Separate </string>
    <string name="tb12"> مڪمل گھر ڀاتين جو تعداد </string>
    <string name="tb13"> گھر ۾ مڪمل شادي شده عورتن جو تعداد </string>
    <string name="tb14"> گھر ۾ پنجن سالن کان گھٽ عمر وارن ٻارن جو تعداد </string>
    <string name="tcheading"> گھر جي سماجي ۽ اقتصادي معلومات </string>
    <string name="tc0101"> Natural floor </string>
    <string name="tc0102"> Rudimentary floor </string>
    <string name="tc0103"> Finished floor </string>
    <string name="tc01"> فرش ڪهڙي قسم جو آهي </string>
    <string name="tc01a"> زمين / واري / مٽي </string>
    <string name="tc01b"> ڇيڻن جو ٿلهو يا راڳوو  </string>
    <string name="tc01c"> ڪاٺين جو فرش </string>
    <string name="tc01d"> بانس </string>
    <string name="tc01e"> پالش ٿيل ڪاٺ جو  </string>
    <string name="tc01f"> اسفالٽ سٽرپس </string>
    <string name="tc01g"> ٽائلس </string>
    <string name="tc01h"> سيمينٽ </string>
    <string name="tc01i"> قالين </string>
    <string name="tc01j"> سرن جو </string>
    <string name="tc01k"> چتائي </string>
    <string name="tc01l"> ماربل </string>
    <string name="tc0201"> Natural roof </string>
    <string name="tc0202"> Rudimentary roofing </string>
    <string name="tc0203"> Finished roofing </string>
    <string name="tc02"> ڇت ڪهڙي قسم جي آهي
    </string>
    <string name="tc02a"> ڇت ڪونهي </string>
    <string name="tc02b"> کجي جي ڦرن جي </string>
    <string name="tc02c"> ڪکا / گاه </string>
    <string name="tc02d"> رسٽڪ ڇٽائي </string>
    <string name="tc02e"> بانسن جي </string>
    <string name="tc02f"> ڪاٺين جون تختيون </string>
    <string name="tc02g"> ڪاغذن جي/ گتن جي </string>
    <string name="tc02h"> لوهه جا پتر </string>
    <string name="tc02i"> پڪيون سرون/ RCC/ (پڪي سيمنٽ جي)  </string>
    <string name="tc02j"> لوهه جي </string>
    <string name="tc02k"> ڪاٺ/ٽي آئرن/مٽي </string>
    <string name="tc02l"> سيمينٽ فائبر/چادرون  </string>
    <string name="tc02m"> ٽائلس جي </string>
    <string name="tc02n"> ڇت سازي (سيمنٽ جا سليب)  </string>
    <string name="tc02o"> سرن جي </string>
    <string name="tc0301"> Natural Walls </string>
    <string name="tc0302"> Rudimentary Walls </string>
    <string name="tc0303"> Finished Walls </string>
    <string name="tc03"> ڀتيون ڪهڙي قسم جون آهن؟ </string>
    <string name="tc03a"> ڀتيون نه آھن </string>
    <string name="tc03b"> ڪکا / گاه. </string>
    <string name="tc03c"> مٽي. </string>
    <string name="tc03d"> مٽي سان پٿر </string>
    <string name="tc03e"> مٽي/ڪاٺيون/مٽي </string>
    <string name="tc03f"> ڪچيون سرون </string>
    <string name="tc03g"> تختن جي ڀت </string>
    <string name="tc03h"> ڪاغذن جي/ گتن جي </string>
    <string name="tc03i"> استعمال شده ڪاٺ جي ڀت </string>
    <string name="tc03j"> تنبو/ڪپڙي </string>
    <string name="tc03k"> پلاسٽڪ جا گتا </string>
    <string name="tc03l"> سيمينٽ </string>
    <string name="tc03m"> پٿر سيمينٽ سان لڳل </string>
    <string name="tc03n"> سرون </string>
    <string name="tc03o"> سيمينٽ بلاڪ </string>
    <string name="tc03p"> مڪمل ڀت </string>
    <string name="tc03q"> ڪاٺ جي تختا </string>
    <string name="tc04"> هن گھر ۾ ڪيترا ڪمرا سُمهڻ لاءِ استعمال ٿيندا آهن؟ </string>
    <string name="tc04a"> ڪمرن جو تعداد </string>
    <string name="tc05"> اوهان جنهن گهر ۾ رهو ٿا اهو ڪنهن جي ملڪيت آهي؟ </string>
    <string name="tc05a"> ذاتي </string>
    <string name="tc05b"> ڪرائي وارو </string>
    <string name="tc0601"> In the House </string>
    <string name="tc06"> ڇا کاڌو اڪثر ڪري گھر جي اندر، الڳ جاءِ تي يا گھر کان ٻاھر پچايو ويندو آھي؟ </string>
    <string name="tc06a"> گھر جي اندر الڳ ڪمرو آھي </string>
    <string name="tc06b"> گھر جي اندر ڪنهن ٻي جاءِ تي </string>
    <string name="tc06c"> گھر کان الڳ جاءِ آھي </string>
    <string name="tc06d"> گھر کان ٻاھر کليل جاءِ </string>
    <string name="tc07"> گھر ۾ رڌ پچاءُ لاءِ ڪهڙي قسم جو ٻارڻ خاص طور تي استعمال ڪندا آهيو؟ </string>
    <string name="tc07a"> بجلي </string>
    <string name="tc07b"> ايل پي جي سئلنڊر واري گئس </string>
    <string name="tc07c"> قدرتي گئس </string>
    <string name="tc07d"> بايو ھٿرادو گئس </string>
    <string name="tc07e"> گاسليٽ </string>
    <string name="td01"> ڇا (عورت جو نالو) شادي کان پوءِ ڪڏھن به حمل سان ٿي؟ </string>
    <string name="td02"> (عورت جو نالو) شادي کان پوءِ ڪيترا دفعه حمل سان ٿي آھي؟ </string>
    <string name="td03"> ڪل حملن جو نتيجو ڇا نڪتوھيو؟ (شادي کان پوءِ جيترا دفعه به اوهان پنهنجي عمر ۾ حمل سان ٿيا آھيو) (سامهون اچڻ واري تفصيلات ۾ مردھ ۽زندھ ٻارن جي پيدائش ۽ حمل ضايع ٿيڻ شامل آهن) </string>
    <string name="td03a"> زندھ ڄائو (زندھ ٻار) </string>
    <string name="td03b"> مئل ڄائو (مئل ٻار) </string>
    <string name="td03c"> حمل ضايع ٿيو </string>
    <string name="td04"> ڇا (عورت جو نالو) هن مهل به حمل سان آھي؟ </string>
    <string name="td05"> حمل جو دورانيو ڇا آھي؟ (ھفتن ۾) </string>
    <string name="tha05"> ڇا دستن ۾ رت آيو؟ </string>
</resources>