<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:scrollbars="horizontal"
    tools:context="edu.aku.hassannaqvi.uen_tmk.activities.SectionDActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/secDLabel"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <Spinner
            android:id="@+id/mwraNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"></Spinner>

        <!--        <TextView
                    android:id="@+id/mwraNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@color/pink_100"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/td01"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/td01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/td01a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/td01b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/no" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/fldGrptd02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/td02"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/td02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/td02"
                android:inputType="number"
                android:maxLength="2" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/td03"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/td03lb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/td03a"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/td03sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/td03b"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/td03mc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:hint="@string/td03c"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/td04"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/td04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/td04a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/td04b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:text="@string/no" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/fldGrptd05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/td05"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/td05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:hint="@string/td05"
                    android:inputType="number"
                    android:maxLength="2" />

            </LinearLayout>

        </LinearLayout>


        <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:enabled="false"
                android:onClick="endInterview"
                android:text="@string/end_interview"
                android:textColor="#ff1e1e" />

            <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

            <Button
                android:id="@+id/btn_Continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:onClick="startInterview"
                android:text="@string/start_interview"
                android:textColor="#1ed61e" />
            <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->
        </LinearLayout>

    </LinearLayout>
</ScrollView>